--- a/index.html
+++ b/index.html
@@ -6,23 +6,49 @@
     <link href="./resources/css/styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="module-top">
+    <div class="home-top">
       <h1>Broadway Design</h1>
         <h5>
           <a href="">Home</a></h5>
         <h5>
-          <a href="">Process</a></h5>
+          <a href="#process">Process</a></h5>
         <h5>
           <a href="">Work</a></h5>
         <h5>
           <a href="">Team</a></h5>
         <h5>
-          <a href="">Contact</a></h5>
+          <a href="#contact">Contact</a></h5>
     </div>
     <div class="process">
       <h2>Our Process</h2>
+          <img src="./resources/images/identify-icon.svg" alt="looped arrow">
+            <h3>Identity</h3>
+            <p>We focus on the most important details.</p>
+          <img src="./resources/images/understand-icon.svg" alt="continual circle with arrows">
+            <h3>Understand</h3>
+            <p>We study projects inside and out.</p>
+          <img src="./resources/images/execute-icon.svg" alt="arrow pointing forward">
+            <h3>Execute</h3>
+            <p>We put everything we have into our work.</p>
     </div>
-
+    <div class="module-center">
+      <h4>Designed In New York</h4>
+    </div>
+    <div class="menulinked">
+      <h3>Portfolio</h3>
+        <p>Coming Soon</p>
+      <h3>Team</h3>
+        <p>We're Hiring!</p>
+    </div>
+    <div class="contact">
+      <h3>Contact</h3>
+        <p>Phone: (555)-555-5555 <br>
+         Email: test@example.com <br>
+         Twitter: @test</p>
+    </div>
+    <div class="footer">
+      <h6>© Broadway 2016<a class="footer" href="#home-top">Home</a><a class="footer" href="#process">About</a><a class="footer" href="">Work</a><a class="footer" href="">Contact</a></h6>
+    </div>
 
   </body>
 </html>
